[package]
name = "html_forge"
version = "0.1.0"
edition = "2021"
description = "A robust and efficient HTML parsing library for Rust"
authors = ["benodiwal <sachinbeniwal0101@gmail.com>"]
repository = "https://github.com/benodiwal/html_forge"
license = "MIT"
readme = "README.md"
keywords = ["html", "dom", "parser"]
categories = ["parsing", "web-programming"]

[dependencies]
